https://github.com/craftercms/craftercms/issues/2620 - [studio-ui] sidebar in on dashboard flickers during publishing #2620

--- a/ui/scss/temp.scss
+++ b/ui/scss/temp.scss
@@ -527,7 +527,7 @@ a.acn-parent-folder:before {
 }
 
 .acn-dropdown-menu-inner{
-  min-height: calc(100% - 122px);
+  min-height: calc(100% - 131px);
 }
 
 .acn-dropdown-wrapper .acn-dropdown-footer {
@@ -536,6 +536,7 @@ a.acn-parent-folder:before {
   width: inherit;
   border-top: 1px solid #ccc;
   margin-top: 28px;
+  height: 103px;
 }
 
 .acn-dropdown-wrapper .acn-dropdown-footer a{
